// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lesson Card Complete State Should render lessonCard with loading... 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="lesson-card__wrapper d-flex p-2"
    >
      <img
        class="align-self-center"
        height="165"
        src="/assets/curriculum/undefined"
        width="116"
      />
      <div
        class="lesson-card__description pl-4"
      >
        <div
          class="d-flex"
        >
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              class=""
              href="/curriculum/undefined"
            />
          </h4>
          <span
            class="lesson-card__badge badge badge-pill badge-success mt-2 mr-2 ml-auto p-2 d-flex align-items-center"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
              />
              <polyline
                points="22 4 12 14.01 9 11.01"
              />
            </svg>
            <span
              class="mx-1 d-none d-md-block"
            >
              COMPLETED
            </span>
          </span>
        </div>
        <div>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/assets/curriculum/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="mt-2"
          />
        </div>
        <a
          class="btn btn-sm bg-primary text-white float-right mb-2 mr-2"
        >
          Review 
          <div
            class="spinner-border spinner-border-sm mx-1"
            role="status"
          />
           Submissions
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lesson Card Complete State Should render lessonCard with null if no data 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="lesson-card__wrapper d-flex p-2"
    >
      <img
        class="align-self-center"
        height="165"
        src="/assets/curriculum/undefined"
        width="116"
      />
      <div
        class="lesson-card__description pl-4"
      >
        <div
          class="d-flex"
        >
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              class=""
              href="/curriculum/undefined"
            />
          </h4>
          <span
            class="lesson-card__badge badge badge-pill badge-success mt-2 mr-2 ml-auto p-2 d-flex align-items-center"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
              />
              <polyline
                points="22 4 12 14.01 9 11.01"
              />
            </svg>
            <span
              class="mx-1 d-none d-md-block"
            >
              COMPLETED
            </span>
          </span>
        </div>
        <div>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/assets/curriculum/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="mt-2"
          />
        </div>
        <a
          class="btn btn-sm bg-primary text-white float-right mb-2 mr-2"
        >
          Review 
          <span>
            0
          </span>
           Submissions
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lesson Card Complete State Should render lessonCard with submission count 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="lesson-card__wrapper d-flex p-2"
    >
      <img
        class="align-self-center"
        height="165"
        src="/assets/curriculum/undefined"
        width="116"
      />
      <div
        class="lesson-card__description pl-4"
      >
        <div
          class="d-flex"
        >
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              class=""
              href="/curriculum/undefined"
            />
          </h4>
          <span
            class="lesson-card__badge badge badge-pill badge-success mt-2 mr-2 ml-auto p-2 d-flex align-items-center"
          >
            <svg
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
              />
              <polyline
                points="22 4 12 14.01 9 11.01"
              />
            </svg>
            <span
              class="mx-1 d-none d-md-block"
            >
              COMPLETED
            </span>
          </span>
        </div>
        <div>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/assets/curriculum/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="mt-2"
          />
        </div>
        <a
          class="btn btn-sm bg-primary text-white float-right mb-2 mr-2"
        >
          Review 
          <span>
            2
          </span>
           Submissions
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lesson Card Should render ellpsis when no data is present 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="lesson-card__wrapper d-flex p-2"
    >
      <img
        class="align-self-center"
        height="165"
        src="/assets/curriculum/undefined"
        width="116"
      />
      <div
        class="lesson-card__description pl-4"
      >
        <div
          class="d-flex"
        >
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              class=""
              href="/curriculum/undefined"
            />
          </h4>
        </div>
        <div>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/assets/curriculum/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="mt-2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lesson Card Should render lessonCard with inProgress currentState prop 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 lesson-card__container_inprogress border-primary"
  >
    <div
      class="lesson-card__wrapper d-flex p-2"
    >
      <img
        class="align-self-center"
        height="165"
        src="/assets/curriculum/undefined"
        width="116"
      />
      <div
        class="lesson-card__description pl-4"
      >
        <div
          class="d-flex"
        >
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              class=""
              href="/curriculum/undefined"
            />
          </h4>
        </div>
        <div>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/assets/curriculum/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="mt-2"
          />
        </div>
      </div>
    </div>
    <div
      class="p-2 bg-primary"
    />
  </div>
</div>
`;

exports[`Lesson Card Should render lessonCard with lessonId prop 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="lesson-card__wrapper d-flex p-2"
    >
      <img
        class="align-self-center"
        height="165"
        src="/assets/curriculum/undefined"
        width="116"
      />
      <div
        class="lesson-card__description pl-4"
      >
        <div
          class="d-flex"
        >
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              class=""
              href="/curriculum/4"
            />
          </h4>
        </div>
        <div>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/assets/curriculum/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="mt-2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lesson Card Should render lessonCard with no submission count 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="lesson-card__wrapper d-flex p-2"
    >
      <img
        class="align-self-center"
        height="165"
        src="/assets/curriculum/undefined"
        width="116"
      />
      <div
        class="lesson-card__description pl-4"
      >
        <div
          class="d-flex"
        >
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              class=""
              href="/curriculum/undefined"
            />
          </h4>
        </div>
        <div>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/assets/curriculum/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="mt-2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lesson Card Should render loading card when loading 1`] = `
<div>
  <div
    class="card shadow-sm mt-3 border-0"
  >
    <div
      class="lesson-card__wrapper d-flex p-2"
    >
      <img
        class="align-self-center"
        height="165"
        src="/assets/curriculum/undefined"
        width="116"
      />
      <div
        class="lesson-card__description pl-4"
      >
        <div
          class="d-flex"
        >
          <h4
            class="lesson-card__title font-weight-bold mt-3"
          >
            <a
              class=""
              href="/curriculum/undefined"
            />
          </h4>
        </div>
        <div>
          <div>
            <div
              class="d-inline-block mr-4"
            >
              <img
                alt="icon-challenge"
                class="mr-2"
                src="/assets/curriculum/icons/icon-challenge.svg"
              />
              <span
                class="lesson-card__icon-text"
              >
                 CHALLENGES
              </span>
            </div>
          </div>
          <p
            class="mt-2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
